--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <button class="k drum" id="k">k</button>
     <button class="l drum" id="l">l</button>
   </div>
-
+  <div> Click here </div>
   <footer>
     Made with ❤️ in London.
   </footer>
